# digikey-inventree-integration

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yaml  python-test.yaml
inventree_digikey/: ConfigReader.py  Digikey.py  ImageManager.py  Inventree.py  __init__.py  __main__.py
inventree_digikey_integration/: ConfigReader.py  ImageManager.py  Inventree.py  __main__.py
inventree_digikey_integration/suppliers/: Digikey.py  SupplierBase.py  __init__.py
tests/: conftest.py  test_cli.py  test_digikey.py  test_image_manager.py  test_inventree.py
tests/test_data/: generate_test_data.py  test_config.ini  test_dkpart.pkl  test_resp.pkl
tests/test_data/supplier_api_responses/: Digikey_resp.pkl
tests/unit/: test_cli.py  test_inventree.py
tests/unit/supplier/: test_digikey.py  test_suppliers.py
